kubernetes/desafio-k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-desafio
---
apiVersion: v1
kind: Namespace
metadata:
  name: networking
