kubernetes/desafio-k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-desafio
spec:
  selector:
    matchLabels:
      app: desafio
  template:
    metadata:
      labels:
        app: desafio
    spec:
      containers:
      - name: desafio
        image: videpierri/desafio-devops:v1
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: service-desafio
spec:
  selector:
    app: desafio
  ports:
  - port: 80
    targetPort: 3000
    name: http
    protocol: TCP
  type: NodePort
