kubernetes/desafio-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-desafio
  namespace: app-desafio
spec:
  selector:
    app: desafio
  ports:
  - port: 80
    targetPort: 3000
    name: http
    protocol: TCP
  type: NodePort
